src/snapshots/green_tea__error__test__error_unknown_keyword.snap
---
source: src/error.rs
expression: "Hello {% wrong %}"
---
Unexpected token: wrong

error: 
  ┌─ -test-:1:10
  │
1 │ Hello {% wrong %}
  │          ^^^^^


